--- a/Milestone2.ipynb
+++ b/Milestone2.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,9 +32,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Pickles/crime.pickle\n",
+      "The number of states is: 51\n",
+      "Pickles/rent.pickle\n",
+      "The number of states is: 50\n",
+      "Pickles/mc_donalds.pickle\n",
+      "The number of states is: 51\n",
+      "Pickles/pop_inc_exp_edu.pickle\n",
+      "The number of states is: 51\n",
+      "Pickles/homeless.pickle\n",
+      "The number of states is: 50\n",
+      "Pickles/hv_data.pickle\n",
+      "The number of states is: 50\n",
+      "Pickles/tuition_fees.pickle\n",
+      "The number of states is: 51\n"
+     ]
+    }
+   ],
    "source": [
     "# We put all dataframes in a list\n",
     "df_list = []\n",
@@ -42,12 +63,14 @@
     "for pck in os.listdir(\"Pickles/\"):\n",
     "    # We avoid all files which are not pickle files (like .ipynb_checkpoints)\n",
     "    if pck.endswith(\".pickle\"):\n",
-    "        df_list.append(pd.read_pickle(\"Pickles/\" + pck))"
+    "        print(\"Pickles/{}\".format(pck))\n",
+    "        df_list.append(pd.read_pickle(\"Pickles/\" + pck))\n",
+    "        print(\"The number of states is: {}\".format(len(df_list[-1])))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -79,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -106,7 +129,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -125,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -344,7 +367,7 @@
        "[5 rows x 46 columns]"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -362,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -388,7 +411,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -426,7 +449,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:ada] *",
+   "display_name": "Python [conda env:ada]",
    "language": "python",
    "name": "conda-env-ada-py"
   },
