--- a/Milestone2.ipynb
+++ b/Milestone2.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,26 +32,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Pickles/crime.pickle\n",
+      "Pickles/homeless.pickle\n",
       "The number of states is: 51\n",
       "Pickles/rent.pickle\n",
-      "The number of states is: 50\n",
-      "Pickles/mc_donalds.pickle\n",
-      "The number of states is: 51\n",
-      "Pickles/pop_inc_exp_edu.pickle\n",
-      "The number of states is: 51\n",
-      "Pickles/homeless.pickle\n",
-      "The number of states is: 50\n",
-      "Pickles/hv_data.pickle\n",
-      "The number of states is: 50\n",
-      "Pickles/tuition_fees.pickle\n",
       "The number of states is: 51\n"
      ]
     }
@@ -449,9 +439,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:ada]",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda-env-ada-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -463,7 +453,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
