--- a/rentData.ipynb
+++ b/rentData.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -239,7 +239,7 @@
        "[5 rows x 73 columns]"
       ]
      },
-     "execution_count": 86,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -252,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -261,7 +261,7 @@
        "True"
       ]
      },
-     "execution_count": 87,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -273,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -485,7 +485,7 @@
        "[5 rows x 73 columns]"
       ]
      },
-     "execution_count": 88,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -505,7 +505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -519,7 +519,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 89,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -530,7 +530,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -541,7 +541,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -552,7 +552,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -561,7 +561,7 @@
        "False"
       ]
      },
-     "execution_count": 92,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -573,7 +573,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -591,7 +591,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -615,7 +615,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -719,7 +719,7 @@
        "4  1244.333333  "
       ]
      },
-     "execution_count": 95,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -759,7 +759,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -820,7 +820,7 @@
        "4  California"
       ]
      },
-     "execution_count": 96,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -835,7 +835,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1047,7 +1047,7 @@
        "[5 rows x 26 columns]"
       ]
      },
-     "execution_count": 97,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1091,7 +1091,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1100,7 +1100,7 @@
        "Text(0, 0.5, 'rent price.')"
       ]
      },
-     "execution_count": 98,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1141,7 +1141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1150,7 +1150,7 @@
        "Text(0, 0.5, 'rent price.')"
       ]
      },
-     "execution_count": 99,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1197,7 +1197,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "output = output[[\"Location\", \"Price_2018_Studio\", \"Price_2018_1br\", \"Price_2018_2br\", \"Price_2018_3br\", \"Price_2018_4br\"]]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Filling missing values"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Values for Hawaii are missing. We will fill them using the rent price from this web site: https://www.rentdata.org/states/2018#map\n",
+    "\n",
+    "The prices are not exactly the same as the one from the original web site but it's better to have small differences than having a missing value."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df2 = pd.DataFrame([['Hawaii', 1122, 1292, 1659, 2310, 2772 ]], columns=output.columns)\n",
+    "output = output.append(df2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Saving output"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#saving output\n",
+    "output = output.rename(columns = {\n",
+    "    \"Location\": \"State\"\n",
+    "})\n",
+    "output.to_pickle('Pickles/rent.pickle')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1680,6 +1735,15 @@
        "      <td>1061.666667</td>\n",
        "      <td>1256.333333</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <td>0</td>\n",
+       "      <td>Hawaii</td>\n",
+       "      <td>1122.000000</td>\n",
+       "      <td>1292.000000</td>\n",
+       "      <td>1659.000000</td>\n",
+       "      <td>2310.000000</td>\n",
+       "      <td>2772.000000</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
@@ -1736,6 +1800,7 @@
        "47         West Virginia         539.500000      601.333333      730.416667   \n",
        "48             Wisconsin         575.916667      674.416667      855.750000   \n",
        "49               Wyoming         542.666667      608.083333      781.000000   \n",
+       "0                 Hawaii        1122.000000     1292.000000     1659.000000   \n",
        "\n",
        "    Price_2018_3br  Price_2018_4br  \n",
        "0      1069.666667     1244.333333  \n",
@@ -1787,21 +1852,17 @@
        "46     2075.666667     2458.666667  \n",
        "47      968.166667     1098.416667  \n",
        "48     1133.916667     1270.500000  \n",
-       "49     1061.666667     1256.333333  "
+       "49     1061.666667     1256.333333  \n",
+       "0      2310.000000     2772.000000  "
       ]
      },
-     "execution_count": 100,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "#saving output\n",
-    "output = output.rename(columns = {\n",
-    "    \"Location\": \"State\"\n",
-    "})\n",
-    "output = output[[\"State\", \"Price_2018_Studio\", \"Price_2018_1br\", \"Price_2018_2br\", \"Price_2018_3br\", \"Price_2018_4br\"]]\n",
-    "output.to_pickle('Pickles/rent.pickle')"
+    "output"
    ]
   },
   {
@@ -1814,9 +1875,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:ada]",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda-env-ada-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1828,7 +1889,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
