--- a/Milestone2.ipynb
+++ b/Milestone2.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,16 +32,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Pickles/homeless.pickle\n",
+      "Pickles/crime.pickle\n",
       "The number of states is: 51\n",
       "Pickles/rent.pickle\n",
+      "The number of states is: 51\n",
+      "Pickles/mc_donalds.pickle\n",
+      "The number of states is: 51\n",
+      "Pickles/pop_inc_exp_edu.pickle\n",
+      "The number of states is: 51\n",
+      "Pickles/homeless.pickle\n",
+      "The number of states is: 51\n",
+      "Pickles/hv_data.pickle\n",
+      "The number of states is: 50\n",
+      "Pickles/tuition_fees.pickle\n",
       "The number of states is: 51\n"
      ]
     }
@@ -60,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -92,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -119,7 +129,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -138,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -357,7 +367,7 @@
        "[5 rows x 46 columns]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -375,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -401,7 +411,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -453,7 +463,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
